ДЗ4 - Работа с Helm-ом/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-ms
  labels:
    app: otus-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-ms
  template:
    metadata:
      labels:
        app: otus-ms
    spec:
      containers:
      - name: otus-ms
        image: hoborg91/otus-ms-sample:v24
        ports:
        - containerPort: 8000
