ДЗ4 - Работа с Helm-ом/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-ms-service
spec:
  selector:
    app: otus-ms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
