ДЗ4 - Работа с Helm-ом/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: otus-ms-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: otus-ms-service
                port:
                  number: 80
            path: /otusapp/(.+?)/(.*)
